feat: update latest project

--- a/index.html
+++ b/index.html
@@ -198,9 +198,9 @@
             <div class="swiper-slide">
               <div class="d-flex align-items-center gap-4">
                 <div class="card">
-                  <img src="./assets/nasa-img.png" alt="" />
+                  <img src="./assets/nugas-img.jpg" alt="" />
                 </div>
-                <h1 class="text-purple fw-bold">NASA Class_</h1>
+                <h1 class="text-purple fw-bold">Nugas_</h1>
               </div>
               <div class="text-start mt-4">
                 <div class="project-desc mb-3">
@@ -238,8 +238,9 @@
                     ><i class="bi bi-github"></i> Source Code</a
                   >
                   <a
-                    href="https://ami-learning-club.netlify.app"
+                    href="https://nugas-app.vercel.app"
                     class="btn btn-purple-disable"
+                    target="_blank"
                     ><i class="bi bi-globe2"></i> Demo</a
                   >
                 </div>
@@ -248,9 +249,9 @@
             <div class="swiper-slide">
               <div class="d-flex align-items-center gap-4">
                 <div class="card">
-                  <img src="./assets/rb-img.png" alt="" />
+                  <img src="./assets/nasa-img.png" alt="..." />
                 </div>
-                <h1 class="text-purple fw-bold">RB Community_</h1>
+                <h1 class="text-purple fw-bold">NASA Class_</h1>
               </div>
               <div class="text-start mt-4">
                 <div class="project-desc mb-3">
@@ -288,8 +289,9 @@
                     ><i class="bi bi-github"></i> Source Code</a
                   >
                   <a
-                    href="https://restoe-boemi-prototype.netlify.app"
+                    href="https://ami-learning-club.netlify.app"
                     class="btn btn-purple-disable"
+                    target="_blank"
                     ><i class="bi bi-globe2"></i> Demo</a
                   >
                 </div>
@@ -298,9 +300,9 @@
             <div class="swiper-slide">
               <div class="d-flex align-items-center gap-4">
                 <div class="card">
-                  <img src="./assets/takaiphone-img.png" alt="" />
+                  <img src="./assets/skuynime-img.jpg" alt="" />
                 </div>
-                <h1 class="text-purple fw-bold">TakaiPhone_</h1>
+                <h1 class="text-purple fw-bold">Skuynime_</h1>
               </div>
               <div class="text-start mt-4">
                 <div class="project-desc mb-3">
@@ -338,8 +340,9 @@
                     ><i class="bi bi-github"></i> Source Code</a
                   >
                   <a
-                    href="https://takaiphone.netlify.app"
+                    href="https://skuynime-sigma.vercel.app"
                     class="btn btn-purple-disable"
+                    target="_blank"
                     ><i class="bi bi-globe2"></i> Demo</a
                   >
                 </div>
